# NetSentry

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  install.sh
.github/workflows/: main.yml
configs/: netsentry.yaml
docs/: API.md  ROADMAP.md  TROBULESHOOTING.md
kubernetes/: deployment.yaml
prometheus/: prometheus.yml
src/: main.cpp
src/alert/: alert_manager.cpp  alert_manager.hpp  alert_rule.cpp  alert_rule.hpp
src/api/: rest_api.cpp  rest_api.hpp
src/core/collectors/: collector_base.hpp  cpu_collector.cpp  cpu_collector.hpp  memory_collector.cpp  memory_collector.hpp
src/core/config/: config_manager.cpp  config_manager.hpp
src/core/data/: circular_buffer.hpp  lock_free_queue.hpp
src/core/memory/: memory_pool.hpp
src/core/metrics/: system_metrics.cpp  system_metrics.hpp
src/core/utils/: logger.cpp  logger.hpp  thread_pool.hpp
src/db/: database.hpp
src/network/: packet_analyzer.cpp  packet_analyzer.hpp  packet_capture.cpp  packet_capture.hpp
src/network/protocol_handlers/: protocol_parser.cpp  protocol_parser.hpp
src/web/: dashboard.hpp
src/web/assets/: dashboard.js
test/: main.cpp  test_circular_buffer.cpp  test_metrics.cpp
